--- a/static/json/languages/hi_IN.json
+++ b/static/json/languages/hi_IN.json
@@ -78,7 +78,7 @@
     "guides_and_support": "गाइड और सहायता",
     "learn_about_ethereum": "ईथेरियम के बारे में सीखें",
     "follow_us_on_twitter": "हमें ट्विटर पर फॉलो करें",
-    "share_beta_feedback": "बीटा प्रतिक्रिया साझा करें",
+    "share_feedback": "फ़ीडबैक साझा करें",
     "theme": {
       "title": "थीम",
       "system": "सिस्टम",
@@ -235,6 +235,26 @@
           "wipe_confirmation": "रेनबो रीसेट करें",
           "wipe_confirmation_desc": "क्या आप वाकई रेनबो ब्राउज़र एक्सटेंशन को रीसेट करना चाहते हैं?",
           "wipe_confirmation_button": "रीसेट करें",
+          "wipe_confirmation_cancel": "रद्द करें"
+        },
+        "wipe_wallet_group": {
+          "delete": "वॉलेट समूह हटाएं",
+          "acknowlegement": "मैंने अपना सीक्रेट रिकवरी फ्रेज़ बैक अप कर लिया है।",
+          "warning_one": "आपका वॉलेट समूह हटाने से रेनबो से रिकवरी फ्रेज़ डिलीट हो जाएगा।",
+          "warning_two": "आपकी संपत्ति और फंड सही वॉलेट रिकवरी जानकारी से रिकवर हो सकते हैं।",
+          "warning_three": "आगे बढ़ने से पहले सुनिश्चित करें कि आपका सीक्रेट रिकवरी फ्रेज़ बैक अप हो गया है।",
+          "button_wipe": "रेनबो रीसेट करें",
+          "button_complete": "ऊपर दिए गए चेक को पूरा करें",
+          "wipe_confirmation": "वॉलेट समूह हटाएं",
+          "wipe_confirmation_desc": "क्या आप निश्चित हैं कि आप अपना सीक्रेट रिकवरी फ्रेज़ रेनबो से हटाना चाहते हैं?",
+          "wipe_confirmation_button": "हटाएँ",
+          "wipe_confirmation_cancel": "रद्द करें"
+        },
+        "wipe_hardware_wallet_group": {
+          "delete": "%{vendor} को अनपेयर करें",
+          "wipe_confirmation": "%{vendor} को अनपेयर करें",
+          "wipe_confirmation_desc": "क्या आप निश्चित हैं कि आप अपने %{vendor} को अनपेयर करना चाहते हैं और अपने वॉलेट्स को डिस्कनेक्ट करना चाहते हैं?",
+          "wipe_confirmation_button": "अनपेयर",
           "wipe_confirmation_cancel": "रद्द करें"
         }
       }
@@ -676,6 +696,10 @@
       "price_impact": {
         "title": "छोटा बाजार",
         "description": "कमाना %{impactAmount}"
+      },
+      "unknown_price": {
+        "title": "%{symbol} का बाजार मूल्य अज्ञात",
+        "description": "अगर आप जारी रखने का फैसला करते हैं, तो सुनिश्चित करें कि आपको उद्धृत राशि प्राप्त होने से संतुष्टि है।"
       }
     },
     "aggregators": {
@@ -1314,6 +1338,7 @@
       "ens_website": "वेबसाइट",
       "registered_on": "पंजीकृत",
       "expires_in": "समाप्त होता है",
+      "report": "रिपोर्ट करें",
       "explainer": {
         "floor_price_description": "संग्रह की निचली कीमत वह न्यूनतम मांग की गई कीमत होती है जो उस संग्रह में बिक्री के लिए उपलब्ध सभी वस्तुओं में से होती है।",
         "floor_price_title": "संग्रह की न्यूनतम कीमत",
@@ -1321,7 +1346,12 @@
       },
       "send": "भेजें",
       "view_on_opensea": "OpenSea पर देखें",
-      "view_on_explorer": "%{explorerTitle}पर देखें"
+      "view_on_explorer": "%{explorerTitle}पर देखें",
+      "gallery": "गैलरी",
+      "view_gallery": "गैलरी देखें"
+    },
+    "toast": {
+      "spam_reported": "आपकी रिपोर्ट प्राप्त हो गई है!"
     }
   },
   "points": {
@@ -1390,6 +1420,7 @@
       "referral_activity": "रेफरल गतिविधि:",
       "new_referrals": "नए रेफरल:",
       "retroactive": "पूर्वव्यापी अंक:",
+      "bonus": "बोनस अंक:",
       "total": "कुल:",
       "weekly_counted": "> साप्ताहिक कमाई गिनी गई",
       "you_have": "आपके पास है:",
@@ -1432,12 +1463,23 @@
     "approvals": "टोकन  अनुमोदन",
     "this_token_is_on_network": "यह %{symbol} इस %{chainName} नेटवर्क पर है",
     "view_on": "%{explorer}पर देखें",
+    "view_on_coingecko": "कॉइनगेको पर देखें",
     "not_available": "मूल्य उपलब्ध नहीं है",
     "more_options": {
       "copy_address": "पता कॉपी करें",
       "view_on_explorer": "%{explorer}पर देखें",
       "hide": "टोकन छिपाएँ",
-      "report": "टोकन की रिपोर्ट करें"
+      "report": "टोकन की रिपोर्ट करें",
+      "unpin_token": "%{name} को अनपिन करें",
+      "pin_token": "%{name} को पिन करें",
+      "hide_token": "छिपाएँ %{name}",
+      "unhide_token": "%{name} को अनहाइड करें"
+    },
+    "toast": {
+      "hide_token": "आपका %{name} छिपा हुआ है",
+      "unhide_token": "आपका %{name} अनहाइड हो गया है",
+      "pin_token": "आपका %{name} पिन हो गया है",
+      "unpin_token": "आपका %{name} अनपिन हो गया है"
     },
     "about": {
       "about_token": "लगभग %{name}के बारे में",
@@ -1499,35 +1541,42 @@
   },
   "explainers": {
     "sidechains": {
-      "arbitrum": {
-        "title": "आर्बिट्रम क्या है?",
-        "description_1": "आर्बिट्रम एक Layer 2 नेटवर्क है जो ईथेरीयम के ऊपर चलता है, जिसके द्वारा सस्ते और तेज़ लेन-देन संचालित किया जाता है, हालांकि ईथेरियम की मूल भरोसेमंदता से भी लाभ मिलता है।",
-        "description_2": "यह \"रोल अप\" में बहुत सारे लेन-देन को बंडल करके उन्हें स्थायी रूप से ईथेरियम पर भेजता है।"
+      "layer_two": {
+        "title": "%{chainName} क्या है?",
+        "description_1": "%{chainName} एक लेयर 2 नेटवर्क है जो इथेरियम के ऊपर चलता है, जो सस्ते और तेज़ लेनदेन को सक्षम बनाता है जबकि इथेरियम की अंतर्निहित सुरक्षा से लाभ उठाता है।",
+        "description_2": "यह बहुत सारे लेनदेन को एक \"रोल अप\" में बंडल करता है इससे पहले कि वे इथेरियम पर स्थायी रूप से भेजे जाएं।"
       },
-      "optimism": {
-        "title": "ओप्टिमिज़्म क्या है?",
-        "description_1": "ओप्टिमिज़्म एक लेयर 2 नेटवर्क है जो ईथेरियम के ऊपर चलता है, जिसके माध्यम से सस्ते और तेज़ ट्रांजेक्शन संभव होते हैं और यहां ईथेरियम की आधारभूत सुरक्षा का फ़ायदा उठाया जा सकता है।",
-        "description_2": "यह ट्रांजेक्शनों को ईथेरियम पर भेजने से पहले उन्हें एक \"रोल अप\" में बंडल करता है और फिर उन्हें स्थायी रूप से ईथेरियम पर करता है।"
-      },
-      "polygon": {
-        "title": "पॉलिगॉन क्या है?",
-        "description_1": "पॉलिगॉन एक साइडचेन है, जो ईथेरियम के साथ समरूप है और उसके साथ संगत है।",
-        "description_2": "यह सस्ते और तेज़ ट्रांजेक्शनों की सुविधा प्रदान करता है, लेकिन अनुमानित लेयर 2 नेटवर्क की तरह, पॉलिगॉन का अपना सुरक्षा और सहमति मैकनिज़्म है जो ईथेरियम से अलग होता है।"
-      },
-      "bsc": {
-        "title": "बीएससी क्या है?",
-        "description_1": "बाइनेंस स्मार्ट चेन, यानी बीएससी, ट्रेडिंग प्लेटफ़ॉर्म बाइनेंस के लिए ब्लॉकचेन नेटवर्क है।",
-        "description_2": "यह सस्ते और तेज़ ट्रांजेक्शनों की सुविधा प्रदान करता है, लेकिन अनुमानित लेयर 2 नेटवर्क की तरह, बीएससी का अपना सुरक्षा और सहमति मैकनिज़्म है जो ईथेरियम से अलग होता है।"
-      },
-      "base": {
-        "title": "बेस क्या है?",
-        "description_1": "बेस एक Layer 2 नेटवर्क है जो ईथेरियम के ऊपर चलता है, जिससे हमेशा के लिए ईथेरियम की अपेक्षाकृत सुरक्षा का लाभ लेते हुए सस्ते और तेज़ लेनदेन संभव होते हैं।",
-        "description_2": "यह लेनदेनों को पुनर्प्रेषित करने से पहले उन्हें एक \"रोल अप\" में संकलित करता है और फिर उन्हें स्थायी रूप से ईथेरियम पर भेजता है।"
-      },
-      "zora": {
-        "title": "ज़ोरा क्या है?",
-        "description_1": "Zora एक Layer 2 नेटवर्क है जो Ethereum के ऊपर चलता है, जो सस्ते और तेज़ लेनदेन को संभव बनाता है जबकि फिर भी Ethereum की बुनियादी सुरक्षा से लाभान्वित होता है।",
-        "description_2": "यह Ethereum पर स्थायी रूप से भेजने से पहले \"रोल अप\" में कई लेनदेनों को साथ में बंडल करता है।"
+      "specific": {
+        "polygon": {
+          "title": "पॉलिगॉन क्या है?",
+          "description_1": "पॉलिगॉन एक साइडचेन है, एक विशिष्ट नेटवर्क जो इथेरियम के साथ-साथ चलता है और उसके साथ संगत है।",
+          "description_2": "यह सस्ते और तेज़ लेनदेन को सक्षम बनाता है, लेकिन लेयर 2 नेटवर्क के विपरीत, पॉलिगॉन की अपनी सुरक्षा और सहमति तंत्र होते हैं जो इथेरियम से अलग होते हैं।"
+        },
+        "bsc": {
+          "title": "BSC क्या है?",
+          "description_1": "BNB स्मार्ट चेन, या BSC संक्षेप में, बिनेंस क्रिप्टोकरेंसी एक्सचेंज द्वारा विकसित एक वैकल्पिक लेयर 1 है।",
+          "description_2": "यह सस्ते और तेज़ लेन-देन की अनुमति देता है, परंतु लेयर 2 नेटवर्क्स के विपरीत, BSC की अपनी सुरक्षा और सहमति तंत्र हैं जो एथेरियम से भिन्न हैं।"
+        },
+        "avalanche": {
+          "title": "एवलांच क्या है?",
+          "description_1": "एवलांच एक वैकल्पिक लेयर 1 है जो सबनेट्स की एक पारिस्थितिकी द्वारा संचालित है, जो एथेरियम साइडचेन्स और लेयर 2s के समान है।",
+          "description_2": "यह सस्ते और तेज़ लेन-देन की अनुमति देता है, परंतु लेयर 2 नेटवर्क्स के विपरीत, एवलांच की अपनी सुरक्षा और सहमति तंत्र हैं जो एथेरियम से भिन्न हैं।"
+        },
+        "blast": {
+          "title": "ब्लास्ट क्या है?",
+          "description_1": "ब्लास्ट एक एथेरियम लेयर-2 (L2) प्लेटफॉर्म है जिसे लोकप्रिय NFT मार्केटप्लेस ब्लर के पीछे की प्रतिभाशाली टीम ने बनाया है।",
+          "description_2": "चेन खुद को ईथर (ETH) और विभिन्न स्थिर मुद्राओं जैसे कि USDC, USDT, और DAI के लिए मूल यील्ड के परिचय से अलग करती है।"
+        },
+        "degen": {
+          "title": "डेजेन क्या है?",
+          "description_1": "डेजेन चेन एक लेयर 3 नेटवर्क है जो आर्बिट्रम और एथेरियम के ऊपर चलता है।",
+          "description_2": "यह फार्कास्टर समुदाय टोकन $degen में अत्यंत तेज और सस्ते लेन-देन की पेशकश करता है।"
+        },
+        "custom_network": {
+          "title": "यह नेटवर्क क्या है?",
+          "description_1": "यह आपके द्वारा जोड़ा गया एक कस्टम नेटवर्क है! कस्टम नेटवर्क विशिष्ट आवश्यकताओं को पूरा करने के लिए बनाए जा सकते हैं, अद्वितीय विशेषताओं और क्षमताओं की पेशकश करते हैं।",
+          "description_2": "इसकी कॉन्फ़िगरेशन के आधार पर, यह नेटवर्क विशिष्ट प्रोटोकॉल, सुरक्षा उपायों, और सहमति तंत्र का उपयोग कर सकता है, जिन्हें प्रदर्शन को अनुकूलित करने, लागत को कम करने, या विशेषीकृत सेवाओं की डिलीवरी के लिए डिज़ाइन किया गया है।"
+        }
       },
       "link_button_label": "और पढ़ें",
       "action_label": "समझे"
@@ -1680,6 +1729,7 @@
     "contract": "संविदा",
     "contract_name": "संविदा का नाम",
     "contract_created_at": "कलेक्शन बनाया गया",
+    "to": "को",
     "source_code": "स्रोत कोड",
     "signature": {
       "message": "संदेश"
@@ -1700,6 +1750,7 @@
   "unverified": "अप्रमाणित",
   "skip": "छोड़ें",
   "done": "हो गया",
+  "view_on_explorer": "%{explorer}पर देखें",
   "watch_asset": {
     "chain_id": "चेन आईडी",
     "symbol": "प्रतीक",
