--- a/static/json/languages/ru_RU.json
+++ b/static/json/languages/ru_RU.json
@@ -78,7 +78,7 @@
     "guides_and_support": "Руководства и поддержка",
     "learn_about_ethereum": "Узнать о Ethereum",
     "follow_us_on_twitter": "Подписаться на нас в Twitter",
-    "share_beta_feedback": "Поделиться обратной связью о бета-версии",
+    "share_feedback": "Отправить отзыв",
     "theme": {
       "title": "Тема",
       "system": "Системная",
@@ -235,6 +235,26 @@
           "wipe_confirmation": "Сбросить Rainbow",
           "wipe_confirmation_desc": "Вы уверены, что хотите сбросить расширение браузера Rainbow?",
           "wipe_confirmation_button": "Сбросить",
+          "wipe_confirmation_cancel": "Отмена"
+        },
+        "wipe_wallet_group": {
+          "delete": "Удалить группу кошельков",
+          "acknowlegement": "Я сохранил свою секретную фразу восстановления",
+          "warning_one": "Удаление группы кошельков приведет к удалению фразы восстановления из Rainbow",
+          "warning_two": "Ваши активы и средства можно восстановить, если у вас есть правильная информация для восстановления кошелька",
+          "warning_three": "Перед продолжением убедитесь, что вы сохранили свою секретную фразу восстановления",
+          "button_wipe": "Сбросить Rainbow",
+          "button_complete": "Завершить проверку выше",
+          "wipe_confirmation": "Удалить группу кошельков",
+          "wipe_confirmation_desc": "Вы уверены, что хотите удалить свою секретную фразу восстановления из Rainbow?",
+          "wipe_confirmation_button": "Удалить",
+          "wipe_confirmation_cancel": "Отмена"
+        },
+        "wipe_hardware_wallet_group": {
+          "delete": "Отвязать %{vendor}",
+          "wipe_confirmation": "Отвязать %{vendor}",
+          "wipe_confirmation_desc": "Вы уверены, что хотите отвязать ваш %{vendor} и отключить ваши кошельки?",
+          "wipe_confirmation_button": "Отвязать",
           "wipe_confirmation_cancel": "Отмена"
         }
       }
@@ -676,6 +696,10 @@
       "price_impact": {
         "title": "Маленький рынок",
         "description": "Потеря %{impactAmount}"
+      },
+      "unknown_price": {
+        "title": "Рыночная стоимость %{symbol} неизвестна",
+        "description": "Если вы решите продолжить, убедитесь, что вас устраивает предложенная сумма"
       }
     },
     "aggregators": {
@@ -1314,6 +1338,7 @@
       "ens_website": "Веб-сайт",
       "registered_on": "Зарегистрирован",
       "expires_in": "Истекает через",
+      "report": "Сообщить",
       "explainer": {
         "floor_price_description": "Наименьшая цена коллекции - это самая низкая цена предложения по всем предметам, которые в настоящее время продаются в коллекции",
         "floor_price_title": "Наименьшая цена коллекции",
@@ -1321,7 +1346,12 @@
       },
       "send": "Отправить",
       "view_on_opensea": "Посмотреть на OpenSea",
-      "view_on_explorer": "Посмотреть на %{explorerTitle}"
+      "view_on_explorer": "Посмотреть на %{explorerTitle}",
+      "gallery": "галерея",
+      "view_gallery": "Посмотреть галерею"
+    },
+    "toast": {
+      "spam_reported": "Ваше сообщение получено!"
     }
   },
   "points": {
@@ -1390,6 +1420,7 @@
       "referral_activity": "Активность рефералов:",
       "new_referrals": "Новые рефералы:",
       "retroactive": "Ретроактивные баллы:",
+      "bonus": "Бонусные баллы:",
       "total": "Итого:",
       "weekly_counted": "> Недельный заработок учтен",
       "you_have": "У вас есть:",
@@ -1432,12 +1463,23 @@
     "approvals": "Разрешения для токенов",
     "this_token_is_on_network": "Этот %{symbol} находится в сети %{chainName}",
     "view_on": "Посмотреть на %{explorer}",
+    "view_on_coingecko": "Посмотреть на CoinGecko",
     "not_available": "Цена недоступна",
     "more_options": {
       "copy_address": "Скопировать адрес",
       "view_on_explorer": "Посмотреть на %{explorer}",
       "hide": "Скрыть токен",
-      "report": "Сообщить о токене"
+      "report": "Сообщить о токене",
+      "unpin_token": "Открепить %{name}",
+      "pin_token": "Закрепить %{name}",
+      "hide_token": "Скрыть %{name}",
+      "unhide_token": "Показать %{name}"
+    },
+    "toast": {
+      "hide_token": "Ваш %{name} скрыт",
+      "unhide_token": "Ваш %{name} отображается",
+      "pin_token": "Ваш %{name} закреплен",
+      "unpin_token": "Ваш %{name} откреплен"
     },
     "about": {
       "about_token": "О %{name}",
@@ -1499,35 +1541,42 @@
   },
   "explainers": {
     "sidechains": {
-      "arbitrum": {
-        "title": "Что такое Arbitrum?",
-        "description_1": "Arbitrum - это сеть Layer 2, работающая поверх Ethereum и позволяющая осуществлять более дешевые и быстрые транзакции, при этом сохраняя преимущества основной безопасности Ethereum.",
-        "description_2": "Он группирует множество транзакций вместе в \"roll up\", прежде чем отправить их на постоянное хранение в Ethereum."
+      "layer_two": {
+        "title": "Что такое %{chainName}?",
+        "description_1": "%{chainName} - это сеть второго уровня, которая работает поверх Ethereum, обеспечивая более дешевые и быстрые транзакции, сохраняя при этом безопасность Ethereum",
+        "description_2": "Она объединяет много транзакций в \"роллап\" перед тем, как они будут отправлены на постоянное хранение в Ethereum"
       },
-      "optimism": {
-        "title": "Что такое Optimism?",
-        "description_1": "Оптимизм - это сеть второго уровня, которая работает поверх Ethereum, обеспечивая более дешевые и быстрые транзакции, сохраняя при этом преимущества базовой безопасности Ethereum.",
-        "description_2": "Он объединяет множество транзакций вместе в виде «roll up», прежде чем отправить их для постоянного хранения на Ethereum."
-      },
-      "polygon": {
-        "title": "Что такое Polygon?",
-        "description_1": "Polygon - это побочная цепочка (sidechain), отдельная сеть, работающая параллельно с Ethereum и совместимая с ним.",
-        "description_2": "Он позволяет проводить более дешевые и быстрые транзакции, но в отличие от сетей второго уровня, у Polygon есть свои собственные механизмы безопасности и консенсуса, отличающиеся от Ethereum."
-      },
-      "bsc": {
-        "title": "Что такое BSC?",
-        "description_1": "Binance Smart Chain (BSC) - это блокчейн-сеть для торговой платформы Binance.",
-        "description_2": "Он позволяет проводить более дешевые и быстрые транзакции, но в отличие от сетей второго уровня, у BSC есть свои собственные механизмы безопасности и консенсуса, отличающиеся от Ethereum."
-      },
-      "base": {
-        "title": "Что такое Base?",
-        "description_1": "Base - это Layer 2 сеть, работающая поверх Ethereum, обеспечивающая более дешевые и быстрые транзакции, при этом сохраняя преимущества основной безопасности Ethereum.",
-        "description_2": "Он объединяет множество транзакций вместе в «roll up», прежде чем отправлять их на постоянное размещение в Ethereum."
-      },
-      "zora": {
-        "title": "Что такое Zora?",
-        "description_1": "Zora - это сеть Layer 2, работающая поверх Ethereum, что позволяет снизить стоимость и ускорить транзакции, при этом сохраняя все преимущества безопасности Ethereum.",
-        "description_2": "Она объединяет множество транзакций вместе в «роллап», прежде чем отправить их на постоянное хранение в Ethereum."
+      "specific": {
+        "polygon": {
+          "title": "Что такое Polygon?",
+          "description_1": "Polygon - это сайдчейн, отдельная сеть, которая работает параллельно с Ethereum и совместима с ним",
+          "description_2": "Он позволяет совершать более дешевые и быстрые транзакции, но в отличие от сетей второго уровня, Polygon имеет свои механизмы безопасности и консенсуса, отличные от Ethereum"
+        },
+        "bsc": {
+          "title": "Что такое BSC?",
+          "description_1": "Binance Smart Chain или BSC — это альтернативный уровень 1, разработанный криптовалютной биржей Binance.",
+          "description_2": "Позволяет совершать более дешевые и быстрые транзакции, но в отличие от сетей уровня 2, BSC имеет свои механизмы безопасности и консенсуса, отличные от Ethereum."
+        },
+        "avalanche": {
+          "title": "Что такое Avalanche?",
+          "description_1": "Avalanche — это альтернативный уровень 1, работающий на экосистеме сабнетов, похожих на боковые цепи Ethereum и сети уровня 2.",
+          "description_2": "Позволяет совершать более дешевые и быстрые транзакции, но в отличие от сетей уровня 2, Avalanche имеет свои механизмы безопасности и консенсуса, отличные от Ethereum."
+        },
+        "blast": {
+          "title": "Что такое Blast?",
+          "description_1": "Blast — это платформа уровня 2 (L2) для Ethereum, созданная той же талантливой командой, что и популярный рынок NFT Blur.",
+          "description_2": "Сеть отличается введением родного дохода для эфира (ETH) и различных стейблкоинов, таких как USDC, USDT и DAI."
+        },
+        "degen": {
+          "title": "Что такое Degen?",
+          "description_1": "Degen Chain — это сеть уровня 3, которая работает поверх Arbitrum и Ethereum.",
+          "description_2": "Предлагает невероятно быстрые и дешевые транзакции в токенах сообщества Farcaster $degen."
+        },
+        "custom_network": {
+          "title": "Что это за сеть?",
+          "description_1": "Это пользовательская сеть, добавленная вами! Пользовательские сети могут быть адаптированы для удовлетворения конкретных потребностей, предлагая уникальные функции и возможности.",
+          "description_2": "В зависимости от конфигурации, эта сеть может использовать различные протоколы, меры безопасности и механизмы консенсуса, разработанные для оптимизации производительности, снижения затрат или предоставления специализированных услуг."
+        }
       },
       "link_button_label": "Подробнее",
       "action_label": "Понятно"
@@ -1680,6 +1729,7 @@
     "contract": "Контракт",
     "contract_name": "Имя контракта",
     "contract_created_at": "Контракт создан",
+    "to": "К",
     "source_code": "Исходный код",
     "signature": {
       "message": "Сообщение"
@@ -1700,6 +1750,7 @@
   "unverified": "Непроверенные",
   "skip": "Пропустить",
   "done": "Готово",
+  "view_on_explorer": "Посмотреть на %{explorer}",
   "watch_asset": {
     "chain_id": "Идентификатор сети",
     "symbol": "Символ",
