--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -427,6 +427,7 @@
       "open": "Open",
       "open_in_new_tab": "Open in New Tab",
       "switch_to_wallet": "Switch to Wallet",
+      "send_to_wallet": "Send to Wallet",
       "view": "View"
     },
     "commands": {
@@ -434,6 +435,7 @@
         "send": "Send",
         "swap": "Swap",
         "my_wallets": "My Wallets",
+        "my_contacts": "My Contacts",
         "my_tokens": "My Tokens",
         "my_tokens_watched": "Tokens",
         "my_nfts": "My NFTs",
@@ -473,6 +475,7 @@
         "add_as_watched_wallet": "Watch This Wallet",
         "view_on_ens": "View on ENS",
         "switch_to_wallet": "Switch to This Wallet",
+        "contact_wallet": "Contact this wallet",
         "copy_wallet_address": "Copy Address",
         "view_wallet_on_etherscan": "View on Etherscan",
         "export_addresses_as_csv": "Export Addresses as CSV",
@@ -482,6 +485,7 @@
       "search_tags": {
         "swap": "bridge",
         "my_wallets": "switch",
+        "my_contacts": "contact, contacts",
         "my_tokens_watched": "my",
         "my_nfts_watched": "my",
         "view_profile": "profile, gallery, ens, nfts",
@@ -543,6 +547,10 @@
       "my_wallets": {
         "search_placeholder": "Select a wallet to switch to…",
         "section_title": "My Wallets"
+      },
+      "my_contacts": {
+        "search_placeholder": "Select a your contact wallet",
+        "section_title": "My Contacts"
       },
       "token_detail": {
         "search_placeholder": "Search token actions…",
@@ -1581,7 +1589,7 @@
       },
       "link_button_label": "Read more",
       "action_label": "Got it"
-    },    
+    },
     "send": {
       "to_smart_contract": {
         "description_1": "The address you entered is for a smart contract.",
